--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -94,7 +94,7 @@
 			<phase>compile</phase>
 			<configuration>
 			    <target>
-				<property name="BUILDDIR" value="${project.build.outputDirectory}"/>
+				<property name="BUILDDIR" value="${project.build.outputDirectory}" />
 				<ant antfile="arbil-getfallbackfiles.xml">
 				    <target name="getFallbackFiles-x" />
 				</ant>
@@ -168,7 +168,7 @@
 		<version>1.9.0</version> 
 		<configuration>
 		    <header>${project.parent.basedir}/license-header.txt</header>
-		    <strictCheck>true</strictCheck>
+		    <strictCheck>false</strictCheck>
 		    <properties>
 			<year>${application.license.copyrightYear}</year>
 			<organization>${project.organization.name}</organization>
@@ -183,7 +183,8 @@
 			<exclude>**/*.icns</exclude>
 			<exclude>**/*.php</exclude>
 			<exclude>installer/**</exclude>
-			<exclude>src/main/resources/defaults/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/xsd/http/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/html/license/**</exclude>
@@ -200,73 +201,73 @@
 	</plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>org.apache.xmlbeans</groupId>
-            <artifactId>xmlbeans</artifactId>
-            <version>2.4.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>typechecker</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>imdi-api</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>mpi-util</artifactId>
-            <version>1.0.0</version>
-        </dependency>	
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.6</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.saxon</groupId>
-            <artifactId>Saxon-HE</artifactId>
-            <version>9.4</version>
-        </dependency>
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>xalan</groupId>
-            <artifactId>xalan</artifactId>
-            <version>2.7.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>corpusstructure-api</artifactId>
-            <version>1.7.3</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>pluginloader</artifactId>
-            <version>0.1.34013-testing</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>arbil-help</artifactId>
-            <version>2.4.34016-testing</version>
-        </dependency>
+	<dependency>
+	    <groupId>org.apache.xmlbeans</groupId>
+	    <artifactId>xmlbeans</artifactId>
+	    <version>2.4.0</version>
+	    <scope>compile</scope>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>typechecker</artifactId>
+	    <version>1.7.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>imdi-api</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>mpi-util</artifactId>
+	    <version>1.0.0</version>
+	</dependency>	
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.6</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>net.sf.saxon</groupId>
+	    <artifactId>Saxon-HE</artifactId>
+	    <version>9.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>xerces</groupId>
+	    <artifactId>xercesImpl</artifactId>
+	    <version>2.9.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>xalan</groupId>
+	    <artifactId>xalan</artifactId>
+	    <version>2.7.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>commons-digester</groupId>
+	    <artifactId>commons-digester</artifactId>
+	    <version>2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.16</version>
+	</dependency>
+	<dependency>
+	    <groupId>${project.groupId}</groupId>
+	    <artifactId>corpusstructure-api</artifactId>
+	    <version>1.7.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>pluginloader</artifactId>
+	    <version>0.1.34013-testing</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>arbil-help</artifactId>
+	    <version>2.4.34016-testing</version>
+	</dependency>
     </dependencies>
 
     <pluginRepositories>
