--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -186,6 +186,7 @@
                         <cmdi>XML_STYLE</cmdi>
                     </mapping>
                     <excludes>
+			<exclude>**/nbactions.xml</exclude>
                         <exclude>**/*.txt</exclude>
                         <exclude>**/*.icns</exclude>
                         <exclude>**/*.php</exclude>
