--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -170,6 +170,14 @@
                 </executions>
             </plugin> 
             <plugin>
+		<!-- 
+		    License plugin checks for presence of license header in all source files (with some exceptions, see excludes below).
+		    You can use this plugin to actually insert or fix the license headers by running maven with the following goal:
+
+			mvn license:format
+
+		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
+		-->
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.9.0</version> 
