--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -282,7 +282,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>pluginloader</artifactId>
-            <version>0.1.34013-testing</version>
+            <version>0.1.34202-pretesting</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
