--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -176,8 +176,8 @@
 
 			mvn license:format
 
-		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
-		-->
+              		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
+              		-->
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.9.0</version> 
@@ -194,7 +194,8 @@
                         <cmdi>XML_STYLE</cmdi>
                     </mapping>
                     <excludes>
-			<exclude>**/nbactions.xml</exclude>
+                        <exclude>nbactions.xml</exclude>
+                        <exclude>nb-configuration.xml</exclude>
                         <exclude>**/*.txt</exclude>
                         <exclude>**/*.icns</exclude>
                         <exclude>**/*.php</exclude>
