--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-parent</artifactId>
@@ -14,7 +12,8 @@
 	<module>arbil</module>
 	<module>arbil-help</module>
 	<module>arbil-wicket</module>
-    </modules>
+        <module>arbil-commons</module>
+  </modules>
 
     <organization> 
 	<name>Max Planck Institute for Psycholinguistics</name> 
@@ -113,4 +112,3 @@
 	</repository>
     </distributionManagement>
 </project>
-
