--- a/arbil-commons/pom.xml
+++ b/arbil-commons/pom.xml
@@ -40,26 +40,35 @@
       </resources>
       <plugins>
           <plugin>
-                <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
-                <artifactId>maven-svn-revision-number-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>revision</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <entries>
-                        <entry>
-                            <path>${basedir}/src</path>
-                            <!-- this will populate "arbil-commons.version.revision" -->
-                            <prefix>arbil-commons.version</prefix>
-                        </entry>
-                    </entries>
-                </configuration>
-            </plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>2.0.2</version>
+              <configuration>
+                  <source>1.5</source>
+                  <target>1.5</target>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
+              <artifactId>maven-svn-revision-number-plugin</artifactId>
+              <version>1.7</version>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>revision</goal>
+                      </goals>
+                  </execution>
+              </executions>
+              <configuration>
+                  <entries>
+                      <entry>
+                          <path>${basedir}/src</path>
+                          <!-- this will populate "arbil-commons.version.revision" -->
+                          <prefix>arbil-commons.version</prefix>
+                      </entry>
+                  </entries>
+              </configuration>
+          </plugin>
           <plugin>
                 <groupId>com.keyboardsamurais.maven</groupId>
                 <artifactId>maven-timestamp-plugin</artifactId>
@@ -82,46 +91,46 @@
 
 			mvn license:format
 
-            		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
-            		-->
-              <groupId>com.mycila.maven-license-plugin</groupId>
-              <artifactId>maven-license-plugin</artifactId>
-              <version>1.9.0</version> 
-              <configuration>
-                  <header>${project.parent.basedir}/license-header.txt</header>
-                  <strictCheck>false</strictCheck>
-                  <properties>
-                      <year>${arbil-commons.license.copyrightYear}</year>
-                      <organization>${project.organization.name}</organization>
-                  </properties>
-                  <mapping>
-                      <svg>XML_STYLE</svg>
-                      <imdi>XML_STYLE</imdi>
-                      <cmdi>XML_STYLE</cmdi>
-                  </mapping>
-                  <excludes>
-                      <exclude>nbactions.xml</exclude>
-                      <exclude>nb-configuration.xml</exclude>
-                      <exclude>**/*.txt</exclude>
-                      <exclude>**/*.icns</exclude>
-                      <exclude>**/*.php</exclude>
-                      <exclude>installer/**</exclude>
-                      <exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
-                      <exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
-                      <exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
-                      <exclude>src/main/resources/nl/mpi/arbil/resources/xsd/http/**</exclude>
-                      <exclude>src/main/resources/nl/mpi/arbil/resources/html/license/**</exclude>
-                  </excludes>
-              </configuration>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>check</goal>
-                      </goals>
-                  </execution>
-              </executions>
-          </plugin>
-      </plugins>
+              		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
+              		-->
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.9.0</version> 
+                <configuration>
+                    <header>${project.parent.basedir}/license-header.txt</header>
+                    <strictCheck>false</strictCheck>
+                    <properties>
+                        <year>${arbil-commons.license.copyrightYear}</year>
+                        <organization>${project.organization.name}</organization>
+                    </properties>
+                    <mapping>
+                        <svg>XML_STYLE</svg>
+                        <imdi>XML_STYLE</imdi>
+                        <cmdi>XML_STYLE</cmdi>
+                    </mapping>
+                    <excludes>
+                        <exclude>nbactions.xml</exclude>
+                        <exclude>nb-configuration.xml</exclude>
+                        <exclude>**/*.txt</exclude>
+                        <exclude>**/*.icns</exclude>
+                        <exclude>**/*.php</exclude>
+                        <exclude>installer/**</exclude>
+                        <exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
+                        <exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
+                        <exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
+                        <exclude>src/main/resources/nl/mpi/arbil/resources/xsd/http/**</exclude>
+                        <exclude>src/main/resources/nl/mpi/arbil/resources/html/license/**</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
     <dependencies>
         <dependency>
