refs #2396 Created a module for Internationalisation in Arbil. Moved the strings from the menu system into strings in property files.

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -295,6 +295,11 @@
             <artifactId>arbil-commons</artifactId>
             <version>0.2.34218-pretesting</version>
         </dependency>
+        <dependency>
+            <groupId>nl.mpi</groupId>
+            <artifactId>arbil-localisation</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>    
     <pluginRepositories>
         <pluginRepository>
