refs #2396 Created a module for Internationalisation in Arbil. Moved the strings from the menu system into strings in property files. Added a badly translated local for French.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 	<module>arbil-help</module>
 	<module>arbil-wicket</module>
         <module>arbil-commons</module>
-  </modules>
+        <module>arbil-localisation</module>
+    </modules>
 
     <organization> 
 	<name>Max Planck Institute for Psycholinguistics</name> 
