--- a/arbil-localisation/pom.xml
+++ b/arbil-localisation/pom.xml
@@ -1,26 +1,67 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>nl.mpi</groupId>
+        <artifactId>arbil-parent</artifactId>
+        <version>2.5</version>
+    </parent>
     <groupId>nl.mpi</groupId>
-    <artifactId>arbil-parent</artifactId>
-    <version>2.5</version>
-  </parent>
-  <groupId>nl.mpi</groupId>
-  <artifactId>arbil-localisation</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>arbil-localisation</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <artifactId>arbil-localisation</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>arbil-localisation</name>
+    <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <!--    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.systemsplanet.plugin</groupId>
+                <artifactId>google-api-translate-java-maven-plugin</artifactId>
+                <inherited>false</inherited>
+                <configuration>
+                    <debug>true</debug>
+                    <sourceTranslationPath>
+                        ${basedir}/src/main/resources/nl/mpi/arbil/localisation
+                    </sourceTranslationPath>
+                    <languageFilePattern>
+                        Menus_{0}.properties
+                    </languageFilePattern>
+                    <sourceLanguage>
+                        en
+                    </sourceLanguage>
+                    <destinationPath>
+                        ${project.build.directory}/classes/
+                    </destinationPath>
+                      ar,zh,zh-CN,zh-TW,nl,fr,de,el,it,ja,ko,pt,ru,es 
+                    <targetLanguages>
+                        nl,fr,de,it,es
+                    </targetLanguages>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-projects</id>
+                        <goals>
+                            <goal>localize</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>-->
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+<!--        <dependency>
+            <groupId>com.googlecode</groupId>
+            <artifactId>google-api-translate-java</artifactId>
+            <version>0.92</version>
+        </dependency>-->
+    </dependencies>
 </project>
