--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -54,7 +54,7 @@ application.debian.section=science
 # zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
 application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
 application.todoListLocation=https://trac.mpi.nl/query?status=accepted&status=assigned&status=new&status=reopened&component=Arbil&format=csv&max=1000&col=id&col=summary&col=milestone&col=type&order=milestone
-application.doneListLocation=https://trac.mpi.nl/query?status=closed&component=Arbil&format=csv&max=1000&col=id&col=summary&col=milestone&col=type&order=milestone
+application.doneListLocation=https://trac.mpi.nl/query?status=closed&component=Arbil&format=csv&max=1000&col=id&col=summary&col=milestone&col=type&resolution=fixed&order=milestone
 
 ####################################
 # Locations
