--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -197,6 +197,7 @@
 			<exclude>**/*.icns</exclude>
 			<exclude>**/*.php</exclude>
 			<exclude>installer/**</exclude>
+			<exclude>nbactions.xml</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
