--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -224,7 +224,7 @@
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
-	    <version>4.6</version>
+	    <version>4.10</version>
 	    <scope>test</scope>
 	</dependency>
 	<dependency>
@@ -267,6 +267,11 @@
 	    <artifactId>arbil-help</artifactId>
 	    <version>2.4.34016-testing</version>
 	</dependency>
+        <dependency>
+            <groupId>org.jmock</groupId>
+            <artifactId>jmock-junit4</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
