--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -49,6 +49,7 @@ application.minimalJavaVersion=1.5.0
 # Distribution
 ####################################
 application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, imagemagick
+application.debian.conflicts=graphicsmagick-imagemagick-compat
 application.debian.section=science
 
 # zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
