implemented copying of release notes to server

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -54,6 +54,7 @@ application.debian.section=science
 
 # zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
 application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
+
 application.todoListLocation=https://trac.mpi.nl/query?status=accepted&status=assigned&status=new&status=reopened&component=Arbil&format=csv&max=1000&col=id&col=summary&col=milestone&col=type&order=milestone
 application.doneListLocation=https://trac.mpi.nl/query?status=closed&component=Arbil&format=csv&max=1000&col=id&col=summary&col=milestone&col=type&resolution=fixed&order=milestone
 
@@ -67,6 +68,8 @@ application.baseDir=../
 
 # location of icons directory, relative to the application baseDir
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
+# location of release notes, relative to application baseDir
+application.releaseNotesLocation=release_notes.txt
 # location of mpi.keystore file, relative to the application baseDir
 mpi.keystorelocation=../../../../cert/mpi.keystore
 mpi.keyname=lat-mpg
