Added release notes location to application properties

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -62,6 +62,9 @@ application.baseDir=../
 
 # NOTICE: The following locations are relative to the application's base directory!
 
+# location of release notes, relative to application baseDir
+application.releaseNotesLocation=release_notes.txt
+
 # location of icons directory, relative to the application baseDir
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
