Now depending on stable version of plugin loader

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -260,7 +260,7 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>pluginloader</artifactId>
-	    <version>0.1.34013-testing</version>
+	    <version>1.0.33990-stable</version>
 	</dependency>
 	<dependency>
 	    <groupId>nl.mpi</groupId>
