--- a/arbil-commons/pom.xml
+++ b/arbil-commons/pom.xml
@@ -142,7 +142,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>plugins-core</artifactId>
-            <version>1.1.34907-pretesting</version>
+            <version>1.1-pretesting-SNAPSHOT</version>
         </dependency>
     </dependencies>
     
