--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -269,7 +269,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>pluginloader</artifactId>
-            <version>1.1.34202-pretesting</version>
+            <version>1.1-pretesting-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
