--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -290,6 +290,7 @@
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
             <version>2.5.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>    
 </project>
