--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -4,7 +4,7 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil</artifactId>
     <packaging>jar</packaging>
-    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}</version>
+    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
     <name>Arbil</name>
     
     <parent>
