--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -4,7 +4,10 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil</artifactId>
     <packaging>jar</packaging>
-    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
+    <!--    Either use the snapshot version of manually enter the current build number. 
+    The build number is only required when depending on the output in other projects or building to the server.-->
+    <!--    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
+    <version>${arbil.majorVersion}.${arbil.minorVersion}.35655-${arbil.branch}</version>
     <name>Arbil</name>
     
     <parent>
@@ -265,13 +268,13 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>arbil-help</artifactId>
-	    <version>2.4.35580-testing</version>
+	    <version>${arbil.majorVersion}.${arbil.minorVersion}.35580-${arbil.branch}</version>
 	</dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-junit4</artifactId>
-            <version>2.5.1</version>
-        </dependency>
+	<dependency>
+	    <groupId>org.jmock</groupId>
+	    <artifactId>jmock-junit4</artifactId>
+	    <version>2.5.1</version>
+	</dependency>
     </dependencies>
 
     <pluginRepositories>
