--- a/pom.xml
+++ b/pom.xml
@@ -8,108 +8,120 @@
     <version>2.5</version>
     <description>Parent pom for Arbil</description>
     <modules>
-	<module>imgscalr-maven-plugin</module>
-	<module>arbil</module>
-	<module>arbil-help</module>
-	<module>arbil-wicket</module>
+        <module>imgscalr-maven-plugin</module>
+        <module>arbil</module>
+        <module>arbil-help</module>
+        <module>arbil-wicket</module>
         <module>arbil-commons</module>
         <module>arbil-localisation</module>
     </modules>
 
     <organization> 
-	<name>Max Planck Institute for Psycholinguistics</name> 
-	<url>http://tla.mpi.nl/tools/tla-tools</url>
+        <name>Max Planck Institute for Psycholinguistics</name> 
+        <url>http://tla.mpi.nl/tools/tla-tools</url>
     </organization>
     
     <scm>
-	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/</developerConnection>
-	<url>https://trac.mpi.nl/wiki/Arbil</url>
+        <developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/</developerConnection>
+        <url>https://trac.mpi.nl/wiki/Arbil</url>
     </scm>
 
     <properties>
-	<arbil.majorVersion>2</arbil.majorVersion>
-	<arbil.minorVersion>5</arbil.minorVersion>
-	<arbil.branch>pretesting</arbil.branch>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <arbil.majorVersion>2</arbil.majorVersion>
+        <arbil.minorVersion>5</arbil.minorVersion>
+        <arbil.branch>pretesting</arbil.branch>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+    <dependencies>	
+        <dependency>
+            <groupId>nl.mpi</groupId>
+            <artifactId>plugins-core</artifactId>
+            <version>1.1-pretesting-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.6</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <reporting>
-	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-surefire-report-plugin</artifactId>
-		<version>2.7.2</version>
-		<configuration>
-		    <forkMode>never</forkMode>
-		    <argLine>-Dwt.headless</argLine>
-		    <argLine>-Djava.awt.headless=true</argLine>
-		</configuration>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jxr-plugin</artifactId>
-		<version>2.3</version>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>2.8.1</version>
-	    </plugin>
-	    <plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>findbugs-maven-plugin</artifactId>
-		<version>2.5.1</version>
-		<configuration>
-		    <findbugsXmlOutput>True</findbugsXmlOutput>
-		    <threshold>Normal</threshold>
-		    <effort>Min</effort>
-		</configuration>
-	    </plugin>
-	</plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.7.2</version>
+                <configuration>
+                    <forkMode>never</forkMode>
+                    <argLine>-Dwt.headless</argLine>
+                    <argLine>-Djava.awt.headless=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <findbugsXmlOutput>True</findbugsXmlOutput>
+                    <threshold>Normal</threshold>
+                    <effort>Min</effort>
+                </configuration>
+            </plugin>
+        </plugins>
     </reporting>
     
     <repositories>
-	<repository>
-	    <id>MPI</id>
-	    <name>MPI LAT Repository</name>
-	    <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
-	</repository>
+        <repository>
+            <id>MPI</id>
+            <name>MPI LAT Repository</name>
+            <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
+        </repository>
     </repositories>
     
     <pluginRepositories>
-	<pluginRepository>
-	    <id>MPI</id>
-	    <name>MPI LAT Repository</name>
-	    <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
-	    <snapshots>
-		<enabled>false</enabled>
-	    </snapshots>
-	    <releases>
-		<enabled>true</enabled>
-	    </releases>
-	</pluginRepository>
-	<pluginRepository>
-	    <id>mc-release</id>
-	    <name>Local Maven repository of releases</name>
-	    <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
-	    <snapshots>
-		<enabled>false</enabled>
-	    </snapshots>
-	    <releases>
-		<enabled>true</enabled>
-	    </releases>
-	</pluginRepository>
+        <pluginRepository>
+            <id>MPI</id>
+            <name>MPI LAT Repository</name>
+            <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+        <pluginRepository>
+            <id>mc-release</id>
+            <name>Local Maven repository of releases</name>
+            <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
     </pluginRepositories>
     
     <distributionManagement>
-	<snapshotRepository>
-	    <id>MPI-Snapshots</id>
-	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI-Snapshots</url>
-	</snapshotRepository>
-	<repository>
-	    <id>MPI</id>
-	    <name>MPI Repository</name>
-	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI</url>
-	</repository>
+        <snapshotRepository>
+            <id>MPI-Snapshots</id>
+            <url>https://lux15.mpi.nl/nexus/content/repositories/MPI-Snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>MPI</id>
+            <name>MPI Repository</name>
+            <url>https://lux15.mpi.nl/nexus/content/repositories/MPI</url>
+        </repository>
     </distributionManagement>
 </project>
