Added support for logging through slf4j. Refs #2793. * Configure initial logging at program startup * Re-configure logging as soon as session storage is available * Allow for custom logging.properties in ~/.arbil * Redirect log4j to slf4j

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -162,135 +162,175 @@
 
 			mvn license:format
 
-              		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
-              		-->
-                <groupId>com.mycila.maven-license-plugin</groupId>
-                <artifactId>maven-license-plugin</artifactId>
-                <version>1.9.0</version> 
-                <configuration>
-                    <header>${project.parent.basedir}/license-header.txt</header>
-                    <strictCheck>false</strictCheck>
-                    <properties>
-                        <year>${arbil.license.copyrightYear}</year>
-                        <organization>${project.organization.name}</organization>
-                    </properties>
-                    <mapping>
-                        <svg>XML_STYLE</svg>
-                        <imdi>XML_STYLE</imdi>
-                        <cmdi>XML_STYLE</cmdi>
-                    </mapping>
-                    <excludes>
-                        <exclude>**/*.txt</exclude>
-                        <exclude>**/*.icns</exclude>
-                        <exclude>**/*.php</exclude>
-                        <exclude>installer/**</exclude>
-                        <exclude>nbactions.xml</exclude>
-                        <exclude>nb-configuration.xml</exclude>
-                        <exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
-                        <exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
-                        <exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
-                        <exclude>src/main/resources/nl/mpi/arbil/resources/xsd/http/**</exclude>
-                        <exclude>src/main/resources/nl/mpi/arbil/resources/html/license/**</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+		    For more info, see <http://mathieu.carbou.free.fr/p/maven-license-plugin/>.
+		-->
+		<groupId>com.mycila.maven-license-plugin</groupId>
+		<artifactId>maven-license-plugin</artifactId>
+		<version>1.9.0</version> 
+		<configuration>
+		    <header>${project.parent.basedir}/license-header.txt</header>
+		    <strictCheck>false</strictCheck>
+		    <properties>
+			<year>${arbil.license.copyrightYear}</year>
+			<organization>${project.organization.name}</organization>
+		    </properties>
+		    <mapping>
+			<svg>XML_STYLE</svg>
+			<imdi>XML_STYLE</imdi>
+			<cmdi>XML_STYLE</cmdi>
+		    </mapping>
+		    <excludes>
+			<exclude>**/*.txt</exclude>
+			<exclude>**/*.icns</exclude>
+			<exclude>**/*.php</exclude>
+			<exclude>installer/**</exclude>
+			<exclude>nbactions.xml</exclude>
+			<exclude>nb-configuration.xml</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/defaults/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/resources/templates/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/resources/xsd/http/**</exclude>
+			<exclude>src/main/resources/nl/mpi/arbil/resources/html/license/**</exclude>
+		    </excludes>
+		</configuration>
+		<executions>
+		    <execution>
+			<goals>
+			    <goal>check</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+	</plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>org.apache.xmlbeans</groupId>
-            <artifactId>xmlbeans</artifactId>
-            <version>2.4.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>typechecker</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.nikhef</groupId>
-            <artifactId>slcshttps</artifactId>
-            <version>0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>imdi-api</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>mpi-util</artifactId>
-            <version>1.0.0</version>
-        </dependency>	
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.6</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.saxon</groupId>
-            <artifactId>Saxon-HE</artifactId>
-            <version>9.4</version>
-        </dependency>
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>xalan</groupId>
-            <artifactId>xalan</artifactId>
-            <version>2.7.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>corpusstructure-api</artifactId>
-            <version>1.7.3</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>pluginloader</artifactId>
-            <version>1.1-pretesting-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>arbil-help</artifactId>
-            <version>2.5-pretesting-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>arbil-commons</artifactId>
-            <version>2.5-pretesting-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>arbil-localisation</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-junit4</artifactId>
-            <version>2.5.1</version>
-            <scope>test</scope>
-        </dependency>
+	<dependency>
+	    <groupId>org.apache.xmlbeans</groupId>
+	    <artifactId>xmlbeans</artifactId>
+	    <version>2.4.0</version>
+	    <scope>compile</scope>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>typechecker</artifactId>
+	    <version>1.7.0</version>
+	    <exclusions>
+		<exclusion>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		</exclusion>
+	    </exclusions>        
+	</dependency>
+	<dependency>
+	    <groupId>nl.nikhef</groupId>
+	    <artifactId>slcshttps</artifactId>
+	    <version>0.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>imdi-api</artifactId>
+	    <version>1.1.2</version>
+	    <exclusions>
+		<exclusion>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		</exclusion>
+	    </exclusions>   
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>mpi-util</artifactId>
+	    <version>1.0.0</version>
+	    <exclusions>
+		<exclusion>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		</exclusion>
+	    </exclusions>   
+	</dependency>	
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.6</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>net.sf.saxon</groupId>
+	    <artifactId>Saxon-HE</artifactId>
+	    <version>9.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>xerces</groupId>
+	    <artifactId>xercesImpl</artifactId>
+	    <version>2.9.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>xalan</groupId>
+	    <artifactId>xalan</artifactId>
+	    <version>2.7.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>commons-digester</groupId>
+	    <artifactId>commons-digester</artifactId>
+	    <version>2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>corpusstructure-api</artifactId>
+	    <version>1.7.3</version>
+	    <exclusions>
+		<exclusion>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		</exclusion>
+	    </exclusions>   
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>pluginloader</artifactId>
+	    <version>1.1-pretesting-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>arbil-help</artifactId>
+	    <version>2.5-pretesting-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>arbil-commons</artifactId>
+	    <version>2.5-pretesting-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>arbil-localisation</artifactId>
+	    <version>1.0-SNAPSHOT</version>
+	</dependency>
+
+	<!-- 
+	    LOGGING DEPENDENCIES
+	-->
+
+	<!-- Bind slf4j to JDK logging aka java.util.logging -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-jdk14</artifactId>
+	    <version>1.7.2</version>
+	</dependency>
+	<!-- log4j replacement that redirects to slf4j -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>log4j-over-slf4j</artifactId>
+	    <version>1.7.2</version>
+	</dependency>
+
+	<!-- 
+	    TESTING DEPENDENCIES
+	-->
+	<dependency>
+	    <groupId>org.jmock</groupId>
+	    <artifactId>jmock-junit4</artifactId>
+	    <version>2.5.1</version>
+	    <scope>test</scope>
+	</dependency>
     </dependencies>    
 </project>
