Moved log file logic from bug catcher to log manager. Refs #2793

--- a/arbil/src/main/resources/nl/mpi/arbil/version.properties
+++ b/arbil/src/main/resources/nl/mpi/arbil/version.properties
@@ -22,7 +22,7 @@ application.majorVersion=${arbil.majorVersion}
 application.minorVersion=${arbil.minorVersion}
 application.revision=${arbil.version.committedRevision}
 application.lastCommitDate=${arbil.version.committedDate}
-application.compileDate=${arbil.build-date}
+application.compileDate=${application.build-date}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
 application.branch=${arbil.branch}
 application.projectVersion=${project.version}
