--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -31,7 +31,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 java.util.logging.FileHandler.pattern = %h/arbil%u.log
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.level = INFO
+java.util.logging.FileHandler.level = WARNING
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
  
 # Limit the message that are printed on the console to INFO and above.
