Renamed log file prefix from 'error-' to 'arbil-log-'. Initial log file is now called arbil.log, removed the rotation index. Refs #2793

--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -28,9 +28,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
  
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = %h/arbil%u.log
-java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
+java.util.logging.FileHandler.pattern = %h/arbil.log
 java.util.logging.FileHandler.level = WARNING
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
  
