Replaced all System.out.println statements with logging.debug. Added private final static loggers to all of these classes. Refs #2793

--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -45,5 +45,6 @@ java.level = SEVERE
 javax.level = SEVERE
 sun.level = SEVERE
  
-nl.mpi.arbil.level = FINEST
-nl.mpi.level = FINEST
+nl.mpi.arbil.level = INFO
+nl.mpi.flap.level = INFO
+nl.mpi.level = INFO
